# arkworks-bridge

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml  rust.yml
proof/: pk  proof  vk
src/: circuit.rs  header.rs  inputs.rs  main.rs  r1cs.rs  witness.rs
src/templates/: mod.rs  verifier_groth16.rs  verifier_groth16.sol.tera
test/resources/: .gitignore  pk  prog-r1cs.jsonl  prog-witness.jsonl  vk
